# LearnCMake

./: .gitignore  0.Makefile  1.Makefile  2.Makefile  README.md  main.cpp
0.cmakelists/: CMakeLists.txt
1.cmakelists/: CMakeLists.txt
2.cmakelists/: CMakeLists.txt
include/: calculator.h  logger.h
scripts/: cmake.sh  gcc.sh  make.0.sh  make.1.sh  make.2.sh  make.sh
src/: CMakeLists.txt  calculator.cpp  logger.cpp
